# koinonia

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  default.nix  docker-compose.yml  nginx.conf  shell.nix
.github/workflows/: build.yml  docker.yml
nginx/: Dockerfile  nginx.conf
nginx/static/: index.html  koinonia.js  manifest.json  rtc_config.txt  service-worker.js  style.css  sw.js
plugins/: example.lua  log.lua  music.lua  recieve_websocket.lua
src/: Messages.cpp  Messages.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  Room.cpp  Room.h  SocketInfo.cpp  SocketInfo.h  StreamSock.cpp  StreamSock.h  Util.cpp  Util.h  main.cpp
static/: debug.js  index.html  koinonia.js  rtc_config.txt  style.css
